--- a/src/components/sections/home/main-features/main-features.module.scss
+++ b/src/components/sections/home/main-features/main-features.module.scss
@@ -23,6 +23,14 @@
   left: 0;
   top: 0;
   bottom: 0;
+  padding: 0 20px;
+  margin: 0 -20px;
+  mask-image: radial-gradient(
+    circle,
+    #d9d9d9 0,
+    #d9d9d9 60%,
+    hsl(0deg 0% 85% / 0) 98%
+  );
 }
 
 @media (min-width: $screen-md) {
@@ -42,11 +50,5 @@
     padding: 0 36px;
     position: static;
     height: 640px;
-    mask-image: radial-gradient(
-      circle,
-      #d9d9d9 0,
-      #d9d9d9 60%,
-      hsl(0deg 0% 85% / 0) 98%
-    );
   }
 }
