--- a/src/components/sections/home/software-tells-story/software-tells-story.module.scss
+++ b/src/components/sections/home/software-tells-story/software-tells-story.module.scss
@@ -45,6 +45,10 @@
     margin: 64px auto 0;
     max-width: 785px;
 
+    .progress-mobile {
+      padding-bottom: 10px;
+    }
+
     @include space-y(48px);
   }
 
